css intro to selectors

--- a/index.html
+++ b/index.html
@@ -8,10 +8,42 @@
     <link rel="stylesheet" href="styles.css" />
 </head>
 
+
+
+
+
 <body>
-    <h2>Welcoem to Tuesday</h2>
-    <p>ANything i type</p>
+    <header>
+        <nav id="navbar" class="navigation brie">
+            This is my navbar
+        </nav>
+    </header>
+
+    <img src='./images/download-1.jpg' />
+    
+    <h2>this is h2</h2>
+    <h3>first h3</h3>
+    
+    <h4>this is h4</h4>
+    <section>
+        <h3>my other h3</h3>
+        <h3>second h3</h3>
+    </section>
+
+    <section>
+        <p class="paragraph">Lorem Ipsum Bacon Hispterum whatever</p>
+    </section>
+
+    <i class="paragraph">Also class paragraph</i>
+
+
+
 </body>
+
+
+
+
+
 
 
 
